--- a/app/src/main/res/layout/get_whats_streaming_row.xml
+++ b/app/src/main/res/layout/get_whats_streaming_row.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
-    android:layout_height="250dp"
+    android:layout_width="150dp"
+    android:layout_height="200dp"
     app:cardCornerRadius="10dp"
     app:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/imgThumbnail"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_background" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgThumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@drawable/image_background"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher_background" />
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:maxLines="1"
+            android:text="Hello"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
